syntax = "proto3";

package ProductService.V2;

option csharp_namespace = "gRPC_AspNetCore.Protos.v2";

import "google/protobuf/timestamp.proto";

service ProductService{
	rpc CreateProduct(stream CreateProductRequest) returns (stream CreateProductReply);

	rpc GetAllProducts(GetAllProductsRequest) returns (stream GetAllProductsReply);

	rpc GetProductById(GetProductByIdRequest) returns (GetProductByIdReply);
}

message CreateProductRequest{
	string title=1;
	string description=2;
	int32 price=3;
}

message CreateProductReply{
	int32 status=1;
	string message=2;
	int32 createdItemsCount=3;
}

message GetAllProductsRequest{
	int32 page=1;
	int32 take=2;
}

message GetAllProductsReply{
	int32 id=1;
	string tilte=2;
	string description=3;
	int32 price=4;
	google.protobuf.Timestamp createDate=5;
}


message GetProductByIdRequest{
	int32 id=1;
}

message GetProductByIdReply{
	int32 id=1;
	string tilte=2;
	string description=3;
	int32 price=4;
	google.protobuf.Timestamp createDate=5;
}
